03-appflowy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appflowy
  labels:
    name: appflowy
