03-appflowy/gotrue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotrue-service
  namespace: appflowy
spec:
  selector:
    app: gotrue
  ports:
  - port: 9999
    targetPort: 9999
    protocol: TCP
  type: ClusterIP
