03-appflowy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appflowy-ingress
  namespace: appflowy
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - appflowy.mohannadotaibi.com
      secretName: appflowy-tls
  rules:
  - host: appflowy.mohannadotaibi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appflowy-service
            port:
              number: 80
